msvc: added UNICODE and _UNICODE private definitions to libsodium target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -342,6 +342,8 @@ endif()
 
 if(MSVC)
 	list(APPEND definitions_private
+		"UNICODE"
+		"_UNICODE"
 		"inline=__inline"
 		"_CRT_SECURE_NO_WARNINGS"
 		)
