--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ before_script:
  - cmake -DBUILD_LIBSODIUM_TESTS=ON -DCMAKE_BUILD_TYPE=Release .
 
 script:
- - cmake --build . --config=Release
+ - cmake --build . --config Release
  - ctest
 
