cleaned up CheckFuncAndDefine; tests are now passing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,13 +48,13 @@ if(BUILD_LIBSODIUM_OUTPUT_SIMPLE)
 else()
 endif()
 
-function(CheckFuncAndDefine func_name)
-	string(TOUPPER "${func_name}" HAVE_PART_VARIABLE_NAME)
-	CHECK_FUNCTION_EXISTS(${func_name} ${func_name}_EXISTS)
-	if (${func_name}_EXISTS)
-		list(APPEND definitions_private "HAVE_${HAVE_PART_VARIABLE_NAME}")
+macro(CheckFuncAndDefine func_name)
+	string(TOUPPER "${func_name}" _HAVE_PART_VARIABLE_NAME_)
+	CHECK_FUNCTION_EXISTS(${func_name} ${_HAVE_PART_VARIABLE_NAME_}_EXISTS)
+	if (${_HAVE_PART_VARIABLE_NAME_}_EXISTS)
+		list(APPEND definitions_private "HAVE_${_HAVE_PART_VARIABLE_NAME_}")
 	endif()
-endfunction()
+endmacro()
 
 CHECK_C_COMPILER_FLAG("no-strict-overflow" CC_OVERFLOW_FLAG)
 CHECK_C_COMPILER_FLAG("wrapv" CC_WRAP_V)
@@ -65,8 +65,6 @@ CheckFuncAndDefine(explicit_bzero)
 CheckFuncAndDefine(arc4random)
 CheckFuncAndDefine(arc4random_buf)
 CheckFuncAndDefine(posix_memalign)
-
-message(STATUS "final definitions ${definitions_private}")
 
 if (CC_OVERFLOW_FLAG)
 	list(APPEND CMAKE_C_FLAGS "-fno-strict-overflow")
