--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ compiler:
  - gcc
 
 before_script:
- - rm CMakeCache.txt
+ - rm -rf CMakeCache.txt
  - cmake -DBUILD_LIBSODIUM_TESTS=ON -DCMAKE_BUILD_TYPE=Release .
 
 script:
