fixed check compiler flags step

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,8 +56,8 @@ macro(CheckFuncAndDefine func_name)
 	endif()
 endmacro()
 
-CHECK_C_COMPILER_FLAG("no-strict-overflow" CC_OVERFLOW_FLAG)
-CHECK_C_COMPILER_FLAG("wrapv" CC_WRAP_V)
+CHECK_C_COMPILER_FLAG("-fno-strict-overflow" CC_OVERFLOW_FLAG)
+CHECK_C_COMPILER_FLAG("-fwrapv" CC_WRAP_V)
 CheckFuncAndDefine(mmap)
 CheckFuncAndDefine(madvise)
 CheckFuncAndDefine(mprotect)
