--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,13 @@ compiler:
  - gcc
 
 before_script:
- - rm -rf CMakeCache.txt
- - cmake -DBUILD_LIBSODIUM_TESTS=ON -DCMAKE_BUILD_TYPE=Release .
+ - if [[ $(cmake --version) =~ ([0-9][.][0-9][.][0-9]) ]] && dpkg --compare-versions ${BASH_REMATCH[1]} lt 3.1.0; then UPGRADE="YES"; else UPGRADE=""; fi
+ - if [ "$UPGRADE" == "YES" ] && [ "$(uname -m)" == "x86_64" ]; then wget http://www.cmake.org/files/v3.1/cmake-3.1.0-Linux-x86_64.tar.gz && sudo tar -xf cmake-3.1.0-Linux-x86_64.tar.gz -C /usr --strip-components=1; fi
+ - if [ "$UPGRADE" == "YES" ] && [ "$(uname -m)" != "x86_64" ]; then wget http://www.cmake.org/files/v3.1/cmake-3.1.0-Linux-i386.tar.gz && sudo tar -xf cmake-3.1.0-Linux-i386.tar.gz -C /usr --strip-components=1; fi
+ - rm -f cmake-3.1.0-Linux-*.tar.gz
 
 script:
+ - rm -rf CMakeCache.txt
+ - cmake -DBUILD_LIBSODIUM_TESTS=ON -DCMAKE_BUILD_TYPE=Release .
  - cmake --build . --config Release
  - ctest
-
