--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_script:
 
 script:
  - rm -rf CMakeCache.txt
- - cmake -DBUILD_LIBSODIUM_TESTS=ON -DCMAKE_BUILD_TYPE=Release .
- - cmake --build . --config Release
- - ctest
+ - mkdir -p build/debug build/release
+ - (cd build/release && cmake -DLIBSODIUM_BUILD_TESTS=ON -DCMAKE_BUILD_TYPE=Release ../..)
+ - (cd build/release && cmake --build . --config Release)
+ - (cd build/release && ctest)
